--- a/topics/2_preparing_dita_content_for_localization_in_oxygen/t_organizing_your_project_structure.dita
+++ b/topics/2_preparing_dita_content_for_localization_in_oxygen/t_organizing_your_project_structure.dita
@@ -2,10 +2,10 @@
 <!DOCTYPE task PUBLIC "-//OASIS//DTD DITA General Task//EN" "generalTask.dtd">
 <task id="t_organizing_your_project_structure">
     <title>Organizing your project structure</title>
-    <shortdesc></shortdesc>
+    <shortdesc/>
     <taskbody>
         <context>
-            <p></p>
+            <p/>
         </context>
     </taskbody>
 </task>
