--- a/topics/2_preparing_dita_content_for_localization_in_oxygen/t_working_with_code_block_and_code_phrases.dita
+++ b/topics/2_preparing_dita_content_for_localization_in_oxygen/t_working_with_code_block_and_code_phrases.dita
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE task PUBLIC "-//OASIS//DTD DITA General Task//EN" "generalTask.dtd">
-<task id="t_working_with_conditions">
-    <title>Working with conditions</title>
-    <shortdesc></shortdesc>
+<task id="t_working_with_code_block_and_code_phrases">
+    <title>Working with code block and code phrases</title>
+    <shortdesc/>
     <taskbody>
         <context>
-            <p></p>
+            <p/>
         </context>
     </taskbody>
 </task>
