--- a/topics/1_writing_with_localization_in_mind/c_content_reuse.dita
+++ b/topics/1_writing_with_localization_in_mind/c_content_reuse.dita
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
-<concept id="c_non_translatable_text">
-    <title>Non-translatable text</title>
-    <shortdesc></shortdesc>
+<concept id="c_content_reuse">
+    <title>Content reuse</title>
+    <shortdesc/>
     <conbody>
-        <p></p>
+        <p/>
     </conbody>
 </concept>
