--- a/topics/1_writing_with_localization_in_mind/c_non_translatable_text.dita
+++ b/topics/1_writing_with_localization_in_mind/c_non_translatable_text.dita
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
-<concept id="c_localization_friendly_images">
-    <title>Localization-friendly images</title>
-    <shortdesc></shortdesc>
+<concept id="c_non_translatable_text">
+    <title>Non-translatable text</title>
+    <shortdesc/>
     <conbody>
-        <p></p>
+        <p/>
     </conbody>
 </concept>
