--- a/topics/2_preparing_dita_content_for_localization_in_oxygen/t_handling_images.dita
+++ b/topics/2_preparing_dita_content_for_localization_in_oxygen/t_handling_images.dita
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE task PUBLIC "-//OASIS//DTD DITA General Task//EN" "generalTask.dtd">
-<task id="t_using_the_sort_as_element">
-    <title>Using the &lt;sort-as> element</title>
-    <shortdesc></shortdesc>
+<task id="t_handling_images">
+    <title>Handling images</title>
+    <shortdesc/>
     <taskbody>
         <context>
-            <p></p>
+            <p/>
         </context>
     </taskbody>
 </task>
