Create DITA map

--- a/topics/3_working_with_dita_files_in_memoq/t_working_with_views.dita
+++ b/topics/3_working_with_dita_files_in_memoq/t_working_with_views.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE task PUBLIC "-//OASIS//DTD DITA General Task//EN" "generalTask.dtd">
-<task id="t_working_with_code_block_and_code_phrases">
-    <title>Working with code block and code phrases</title>
+<task id="t_working_with_views">
+    <title>Working with views</title>
     <shortdesc/>
     <taskbody>
         <context>
