--- a/topics/1_writing_with_localization_in_mind/c__writing_dita_with_localization_in_mind.dita
+++ b/topics/1_writing_with_localization_in_mind/c__writing_dita_with_localization_in_mind.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
 <concept id="c_writing_with_localization_in_mind">
-    <title>Writing with localization in mind</title>
+    <title>Writing DITA with localization in mind</title>
     <shortdesc/>
     <conbody>
         <p/>
