--- a/topics/1_writing_with_localization_in_mind/c_conditional_text.dita
+++ b/topics/1_writing_with_localization_in_mind/c_conditional_text.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
-<concept id="Untitled">
-    <title>Documentation formats</title>
+<concept id="c_conditional_text">
+    <title>Conditional text</title>
     <shortdesc/>
     <conbody>
         <p/>
