--- a/topics/1_writing_with_localization_in_mind/c_content_reuse.dita
+++ b/topics/1_writing_with_localization_in_mind/c_content_reuse.dita
@@ -5,5 +5,13 @@
     <shortdesc/>
     <conbody>
         <p/>
+        <section id="section_r4h_l5d_jpb">
+            <title>Conrefs</title>
+            <p/>
+        </section>
+        <section id="section_qfv_l5d_jpb">
+            <title>Keys</title>
+            <p/>
+        </section>
     </conbody>
 </concept>
