--- a/topics/2_preparing_dita_content_for_localization_in_oxygen/c_text_sorting.dita
+++ b/topics/2_preparing_dita_content_for_localization_in_oxygen/c_text_sorting.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
-<concept id="c_working_with_dita_files_in_memoq">
-    <title>Working with DITA files in memoQ</title>
+<concept id="c_text_sorting">
+    <title>Text sorting</title>
     <shortdesc/>
     <conbody>
         <p/>
