--- a/dita_localization.ditamap
+++ b/dita_localization.ditamap
@@ -12,8 +12,8 @@
             <created date="2021-04-21"/>
         </critdates>
     </topicmeta>
-    <topicref
-        href="topics/1_writing_with_localization_in_mind/c__writing_dita_with_localization_in_mind.dita">
+    <topichead
+        navtitle="Writing with localization in mind">
         <topicref href="topics/1_writing_with_localization_in_mind/c_translation_friendly_text.dita"/>
         <topicref href="topics/1_writing_with_localization_in_mind/c_content_reuse.dita"/>
         <topicref href="topics/1_writing_with_localization_in_mind/c_non_translatable_text.dita"/>
@@ -22,26 +22,24 @@
         <topicref
             href="topics/1_writing_with_localization_in_mind/c_localization_friendly_images.dita"/>
         <topicref href="topics/1_writing_with_localization_in_mind/c_glossaries.dita"/>
-    </topicref>
-    <topicref
-        href="topics/2_preparing_dita_content_for_localization_in_oxygen/c__preparing_dita_content_for_localization_in_oxygen.dita">
+    </topichead>
+    <topichead navtitle="Preparing content in oXygen">
         <topicref
             href="topics/2_preparing_dita_content_for_localization_in_oxygen/t_organizing_your_project_structure.dita"/>
         <topicref
-            href="topics/2_preparing_dita_content_for_localization_in_oxygen/t_resolving_conrefs_and_keyrefs.dita"/>
+            href="topics/2_preparing_dita_content_for_localization_in_oxygen/c_localization_related_attributes.dita"/>
         <topicref
-            href="topics/2_preparing_dita_content_for_localization_in_oxygen/t_using_the_sort_as_element.dita"/>
+            href="topics/2_preparing_dita_content_for_localization_in_oxygen/c_text_sorting.dita"/>
         <topicref
-            href="topics/2_preparing_dita_content_for_localization_in_oxygen/t_using_the_index_sort_as_element.dita"
+            href="topics/2_preparing_dita_content_for_localization_in_oxygen/t_resolving_conrefs_keyrefs_and_conkeyrefs.dita"
         />
-    </topicref>
-    <topicref
-        href="topics/3_working_with_dita_files_in_memoq/c__working_with_dita_files_in_memoq.dita">
+    </topichead>
+    <topichead navtitle="Translating content in memoQ">
         <topicref
             href="topics/3_working_with_dita_files_in_memoq/t_importing_a_dita_project_into_memoq.dita"/>
         <topicref
             href="topics/3_working_with_dita_files_in_memoq/t_importing_terms_into_a_term_base.dita"/>
         <topicref href="topics/3_working_with_dita_files_in_memoq/t_translating%20repetitions.dita"
         />
-    </topicref>
+    </topichead>
 </map>
