--- a/topics/2_preparing_dita_content_for_localization_in_oxygen/c_localization_related_attributes.dita
+++ b/topics/2_preparing_dita_content_for_localization_in_oxygen/c_localization_related_attributes.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
-<concept id="c_writing_with_localization_in_mind">
-    <title>Writing DITA with localization in mind</title>
+<concept id="c_localization_related_attributes">
+    <title>Localization-related attributes</title>
     <shortdesc/>
     <conbody>
         <p/>
