--- a/topics/1_writing_with_localization_in_mind/c_content_reuse.dita
+++ b/topics/1_writing_with_localization_in_mind/c_content_reuse.dita
@@ -13,5 +13,13 @@
             <title>Keys</title>
             <p/>
         </section>
+        <section id="section_lpr_dkk_jpb">
+            <title>Konkeyrefs</title>
+            <p/>
+        </section>
+        <section id="section_n5b_2kk_jpb">
+            <title>Conditional text</title>
+            <p/>
+        </section>
     </conbody>
 </concept>
