--- a/topics/1_writing_with_localization_in_mind/c_writing_translation_friendly_text.dita
+++ b/topics/1_writing_with_localization_in_mind/c_writing_translation_friendly_text.dita
@@ -7,14 +7,14 @@
     <conbody>
         <section id="section_efs_sfp_jpb">
             <title>Clarity</title>
-            <p>A text that is easy to understand is often also easier to translate. To make your
-                writing easier to understand by the reader, use these tips:</p>
+            <p>A text that is easy to understand is usually also easier to translate. To make your
+                writing easier to understand, use these tips:</p>
             <ul id="ul_b5f_3gp_jpb">
                 <li>Avoid overly long sentences and paragraphs.</li>
-                <li>Repeat important words in nearby sentences to avoid misunderstanding.<fig
-                        id="fig_ncp_wjp_jpb"/></li>
-                <li>As a rule, don't describe more than one action in a sentence unless the actions
-                    are strictly related.</li>
+                <li>Repeat important words to avoid misunderstanding.<fig id="fig_pjs_rmp_jpb"
+                    /></li>
+                <li>As a rule, don't describe more than one action in a sentence unless writing
+                    about strictly related actions.</li>
                 <li>Use words such as "and," "then," "but," "a," "the," "this," and "that" to make
                     your message clear.</li>
             </ul>
@@ -26,12 +26,14 @@
             <ul id="ul_ax4_kjp_jpb">
                 <li>Express actions with verbs rather than nouns.<fig id="fig_oqc_zjp_jpb"/></li>
                 <li>Use active voice.</li>
-                <li>Avoid clusters of nouns.<fig id="fig_gdn_zjp_jpb"/></li>
+                <li>Split clusters of nouns into smaller logical units.<fig id="fig_gdn_zjp_jpb"
+                    /></li>
             </ul>
         </section>
         <section id="section_lnc_1kp_jpb">
             <title>Formating</title>
-            <p/>
+            <p>Search your text for unintended linebreaks and punctuation marks (such as commas
+                replaced with periods). Translation tools </p>
         </section>
     </conbody>
 </concept>
