--- a/topics/1_writing_with_localization_in_mind/c_writing_translation_friendly_text.dita
+++ b/topics/1_writing_with_localization_in_mind/c_writing_translation_friendly_text.dita
@@ -11,8 +11,10 @@
                 writing easier to understand, use these tips:</p>
             <ul id="ul_b5f_3gp_jpb">
                 <li>Avoid overly long sentences and paragraphs.</li>
-                <li>Repeat important words to avoid misunderstanding.<fig id="fig_pjs_rmp_jpb"
-                    /></li>
+                <li>Repeat important words to avoid misunderstanding.<fig id="fig_ing_myp_jpb">
+                        <image href="../../images/writing-repeating-words.svg"
+                            id="image_er4_myp_jpb"/>
+                    </fig></li>
                 <li>As a rule, don't describe more than one action in a sentence unless writing
                     about strictly related actions.</li>
                 <li>Use words such as "and," "then," "but," "a," "the," "this," and "that" to make
@@ -24,10 +26,14 @@
             <p>You can make your text easier to understand by using certain grammatical forms. To
                 make your writing clearer, follow these rules:</p>
             <ul id="ul_ax4_kjp_jpb">
-                <li>Express actions with verbs rather than nouns.<fig id="fig_oqc_zjp_jpb"/></li>
+                <li>Express actions with verbs rather than nouns.<fig id="fig_oqc_zjp_jpb">
+                        <image href="../../images/writing-actions.svg" id="image_jpp_4yp_jpb"/>
+                    </fig></li>
                 <li>Use active voice.</li>
-                <li>Split clusters of nouns into smaller logical units.<fig id="fig_gdn_zjp_jpb"
-                    /></li>
+                <li>Split clusters of nouns into smaller logical units.<fig id="fig_gdn_zjp_jpb">
+                        <image href="../../images/writing-noun-clusters.svg" id="image_xfz_4yp_jpb"
+                        />
+                    </fig></li>
             </ul>
         </section>
         <section id="section_lnc_1kp_jpb">
