--- a/topics/1_writing_with_localization_in_mind/c_writing_translation_friendly_text.dita
+++ b/topics/1_writing_with_localization_in_mind/c_writing_translation_friendly_text.dita
@@ -13,7 +13,7 @@
                 <li>Avoid overly long sentences and paragraphs.</li>
                 <li>Repeat important words to avoid misunderstanding.<fig id="fig_ing_myp_jpb">
                         <image href="../../images/writing-repeating-words.svg"
-                            id="image_er4_myp_jpb"/>
+                            id="image_er4_myp_jpb" width="480"/>
                     </fig></li>
                 <li>As a rule, don't describe more than one action in a sentence unless writing
                     about strictly related actions.</li>
@@ -27,12 +27,13 @@
                 make your writing clearer, follow these rules:</p>
             <ul id="ul_ax4_kjp_jpb">
                 <li>Express actions with verbs rather than nouns.<fig id="fig_oqc_zjp_jpb">
-                        <image href="../../images/writing-actions.svg" id="image_jpp_4yp_jpb"/>
+                        <image href="../../images/writing-actions.svg" id="image_jpp_4yp_jpb"
+                            width="480"/>
                     </fig></li>
                 <li>Use active voice.</li>
                 <li>Split clusters of nouns into smaller logical units.<fig id="fig_gdn_zjp_jpb">
                         <image href="../../images/writing-noun-clusters.svg" id="image_xfz_4yp_jpb"
-                        />
+                            width="480"/>
                     </fig></li>
             </ul>
         </section>
