--- a/topics/1_writing_with_localization_in_mind/c_writing_translation_friendly_text.dita
+++ b/topics/1_writing_with_localization_in_mind/c_writing_translation_friendly_text.dita
@@ -17,8 +17,8 @@
                             alt="For example, instead of writing 'If the shaft of your wand breaks, you can get a new one online,' write 'If the shaft of your wand breaks, you can get a new wand online.'"
                         />
                     </fig></li>
-                <li>As a rule, don't describe more than one action in a sentence unless writing
-                    about strictly related actions.</li>
+                <li>Don't describe more than one action in a sentence unless writing about strictly
+                    related actions.</li>
                 <li>Use words such as "and," "then," "but," "a," "the," "this," and "that" to make
                     your message clear.</li>
             </ul>
