--- a/topics/1_writing_with_localization_in_mind/c_writing_translation_friendly_text.dita
+++ b/topics/1_writing_with_localization_in_mind/c_writing_translation_friendly_text.dita
@@ -13,9 +13,11 @@
                 <li>Avoid overly long sentences and paragraphs.</li>
                 <li>Repeat important words to avoid misunderstanding.<fig id="fig_ing_myp_jpb">
                         <image href="../../images/writing-repeating-words.svg"
-                            id="image_er4_myp_jpb" width="480"
-                            alt="For example, instead of writing 'If the shaft of your wand breaks, you can get a new one online,' write 'If the shaft of your wand breaks, you can get a new wand online.'"
-                        />
+                            id="image_er4_myp_jpb" width="480">
+                            <alt>For example, instead of writing 'If the shaft of your wand breaks,
+                                you can get a new one online,' write 'If the shaft of your wand
+                                breaks, you can get a new wand online.'</alt>
+                        </image>
                     </fig></li>
                 <li>Don't describe more than one action in a sentence unless writing about strictly
                     related actions.</li>
@@ -30,16 +32,19 @@
             <ul id="ul_ax4_kjp_jpb">
                 <li>Express actions with verbs, not nouns.<fig id="fig_oqc_zjp_jpb">
                         <image href="../../images/writing-actions.svg" id="image_jpp_4yp_jpb"
-                            width="480"
-                            alt="For example, instead of writing 'Applying excessive force can lead to rupture of your wand,' write 'If you apply excessive force, your wand can break.'"
-                        />
+                            width="480">
+                            <alt>For example, instead of writing 'Applying excessive force can lead
+                                to rupture of your wand,' write 'If you apply excessive force, your
+                                wand can break.'</alt>
+                        </image>
                     </fig></li>
                 <li>Use active voice.</li>
                 <li>Split clusters of nouns into smaller logical units.<fig id="fig_gdn_zjp_jpb">
                         <image href="../../images/writing-noun-clusters.svg" id="image_xfz_4yp_jpb"
-                            width="480"
-                            alt="For example, instead of writing 'magic wand cleaning center,' write 'center for cleaning magic wands.'"
-                        />
+                            width="480">
+                            <alt>For example, instead of writing 'magic wand cleaning center,' write
+                                'center for cleaning magic wands.'</alt>
+                        </image>
                     </fig></li>
             </ul>
         </section>
