--- a/topics/1_writing_with_localization_in_mind/c_writing_translation_friendly_text.dita
+++ b/topics/1_writing_with_localization_in_mind/c_writing_translation_friendly_text.dita
@@ -23,7 +23,6 @@
                     related actions.</li>
                 <li>Use words such as "and," "then," "but," "a," "the," "this," and "that" to make
                     your message clear.</li>
-                <li>Make sure that each term has only one meaning.</li>
             </ul>
         </section>
         <section id="section_xv1_p3p_jpb">
@@ -53,10 +52,10 @@
             <title>Formating</title>
             <p>Search your text for unintended linebreaks and punctuation marks (such as periods in
                 place of commas). Translation tools may misinterpret such characters and split
-                sentences into separate units. This can lead to translation errors and
+                sentences into artificial units. This can lead to translation errors and
                 inconsistencies.</p>
             <note id="note_kv1_gbq_jpb" type="important">When localizing a DITA project, always send
-                the translators your source files rather than the output, for example PDF or HTML
+                the translators your source files rather than the output, for instance PDF or HTML
                 files.</note>
         </section>
     </conbody>
