--- a/topics/1_writing_with_localization_in_mind/c_writing_translation_friendly_text.dita
+++ b/topics/1_writing_with_localization_in_mind/c_writing_translation_friendly_text.dita
@@ -54,6 +54,8 @@
                 place of commas). Translation tools may misinterpret such characters and split
                 sentences into separate units. This can lead to translation errors and
                 inconsistencies.</p>
+            <p>Avoid using pagebreaks and empty lines to layout your document. The same content can
+                have a different volume in different languages.</p>
             <note id="note_kv1_gbq_jpb" type="important">When localizing a DITA project, always send
                 the translators your source files rather than the output, for instance PDF or HTML
                 files.</note>
