--- a/topics/3_working_with_dita_files_in_memoq/t_importing_a_dita_project_into_memoq.dita
+++ b/topics/3_working_with_dita_files_in_memoq/t_importing_a_dita_project_into_memoq.dita
@@ -81,7 +81,7 @@
                 id="fig_vyz_wsr_jpb"/><note id="note_xcv_3sr_jpb">To export a translated project,
                 right-click the root folder and choose <menucascade>
                     <uicontrol>Export</uicontrol>
-                    <uicontrol>Export (Stored path)</uicontrol>
+                    <uicontrol>Export (Stored Path)</uicontrol>
                 </menucascade>.</note></result>
     </taskbody>
 </task>
